--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -17,9 +17,11 @@ header{
                 border-radius: 10px;
                 font-family:"Garamond_SemiBold";
                 font-size: 18px;
+                transition: all 0.5s;
                 &:hover{
                     background-color: $wh;
                     color: $bl;
+                    transform: scale(1.1);
                 }
             }
         }
