--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -6,12 +6,12 @@ main{
                 font-family: "Bebas Neue", sans-serif;
                 font-weight: 400;
                 font-style: normal;
-                font-size: 56px;
+                @include encabezados (56px,$bl);
                 margin-top: 20px;
                 text-align: center;
             }
             h2{
-                font-size: 25px;
+                @include encabezados (25px,$bl);
                 margin-bottom: 30px;
                 text-align: center;                
             }
@@ -28,7 +28,7 @@ main{
                 margin-top: 20px;
                 margin-bottom: 30px;
                 margin-left: 25px;
-                font-size: 40px;
+                @include encabezados (40px,$bl);
                 font-family: "Bebas Neue", sans-serif;
                 font-weight: 300;
                 font-style:normal;
@@ -49,8 +49,7 @@ main{
                 margin-right: 30px;
             }
             h3{
-                font-size: 20px;
-                color:$bl;
+                @include encabezados (20px,$bl);
                 margin-left: 25px;
                 font-weight:500;
                 text-align: center;
@@ -92,7 +91,7 @@ main{
                 padding-right: 25px;
                 place-self: center;
                 width:fit-content;
-                padding-bottom: 50px;
+                padding-bottom: 20px;
             }
             .img_nosotros{
                 width: fit-content;
@@ -116,6 +115,10 @@ main{
                     border-radius: 50%;
                     width: 250px;
                     height: 250px;
+                    transition: all 1s;
+                    &:hover{
+                        transform: scale(1.2);
+                    }
                 }
                 .descripcion{
                     margin-top: 20px;
