--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,40 +1,45 @@
 @media screen and (max-width:768px){
-    .contenedor{
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;       
-    }
-
-    .grid_inicio{
-        display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: 1fr;  
-    }
-
-    .grid_nosotros{
-        display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: 1fr;  
-    }
+    main{
+        .fondo_huellas{
+            .contenedor{
+                display: grid;
+                grid-template-rows: 1fr 1fr;
+                grid-template-columns: 1fr 1fr;
+            }   
+            .grid_inicio{
+            display: grid;
+            grid-template-rows: 1fr;
+            grid-template-columns: 1fr;  
+            }
+            .grid_nosotros{
+            display: grid;
+            grid-template-rows: 1fr;
+            grid-template-columns: 1fr;  
+            }
+        }    
+    }       
 }
 
+
+
 @media screen and (max-width:480px){
-
-    .contenedor{
-        display: grid;
-        grid-template-rows: 1fr 1fr 1fr;
-        grid-template-columns: 1fr;        
-    }
-
-    .grid_inicio{
-        display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: 1fr;  
-    }
-
-    .grid_nosotros{
-        display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: 1fr;  
-    }
+    main{
+        .fondo_huellas{
+            .contenedor{
+                display: grid;
+                grid-template-rows: 1fr 1fr 1fr;
+                grid-template-columns: 1fr;
+            }   
+            .grid_inicio{
+                display: grid;
+                grid-template-rows: 1fr;
+                grid-template-columns: 1fr;  
+            }
+            .grid_nosotros{
+                display: grid;
+                grid-template-rows: 1fr;
+                grid-template-columns: 1fr;  
+            }
+        }    
+    }       
 }
